fix: Adjust line height to prevent overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 
 :root {
     font-family: "Adwaita Sans", Helvetica, Arial, sans-serif;
-    line-height: 1.5;
+    line-height: 1.7;
     font-weight: 400;
 
     color-scheme: light dark;
